      (DER, OER, UPER, XER) into tests/tests-randomized. See the following
      article to get the latest LibFuzzer-enabled clang on macOS:
        https://medium.com/@levwalkin/compile-llvm-clang-libfuzzer-b61e82718430
      then ensure the new clang is in the way:
        CC=clang CXX=clang++ ./configure --enable-Werror --enable-test-fuzzer

    FIXES:
    * CVE-2017-12966 verified not present.
    * Fix incomplete (failed) CHOICE XER decoding memory leak.
      (Severity: medium; Security impact: medium)
    * Fix REAL type overwrite conversion memory leak.
      (Severity: low; Security impact: medium)
    * Fix UPER string decoding constrained only by lower bound > 0
      (Severity: low; Security impact: none)
    * Fix UPER decoding of large [bit-]strings of size a multiple of 16K
      (Severity: low; Security impact: none)
    * Fix XER decoder crash on maliciously constructed ENUMERATED input.
      (Severity: medium; Security impact: medium)

0.9.28: 2017-03-26
    * PER decoding: avoid memory leak on error. By github.com/simo5
    * Constness patch #46 by Wim L <wiml@omnigroup.com> (41bbf1c..78d604f).
    Build issues:
    * Fixed generated file permissions introduced by earlier pull (issue/32).
    * Win32/MinGW patch #31 by Frank Morgner (frankmorgner).
    * Autoreconf fix patch by Dave Cridland (github.com/dwd)
    * Fix autoreconf-2.69 failure by github.com/brchiu
    * Fix C99 warnings. Fix by Adrien Destugues (github.com/pulkomandy).
    * C89 compliance fix by Jaroslav Imrich (github.com/jariq).
    * C standard compliance fixes by Markus Elfring (github.com/elfring).

0.9.27: 2014-Sep-17
    * Build structure fixes for portability.
    * Disable long debug of ASN.1 operations during `make check` stage.
    * Introduce --enable-ASN_DEBUG configure flag to emit long debug output.

0.9.26: 2014-Sep-11
    * Updated asn1c-usage.pdf.
    * Made -fskeletons-copy a default option; removed cmdline option.